# django-easyjwt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FIXES.md  README.MD  README.md  mypy.ini  old-precommit  pyproject.toml  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: pypi-build.yml  release-publish.yml  release-version.yml  release.yml
easyjwt_auth/: __init__.py  apps.py  authentication.py  serializers.py  settings.py  tokens.py  utils.py  views.py
easyjwt_auth/token_blacklist/: models.py
easyjwt_auth/token_blacklist/management/commands/: flushexpiredtokens.py
easyjwt_client/: apps.py  authentication.py  checks.py  serializers.py  settings.py  urls.py  utils.py  views.py
easyjwt_user/: admin.py  models.py  settings.py  views.py
easyjwt_user/migrations/: 0002_remove_user_jwt_secret.py  0003_remove_user_user_email_type_unique_alter_user_email.py
remotejwt_client/: utils.py
tests/: conftest.py  settings.py
tests/test_auth/: test_auth_views.py  test_authentication.py  test_backends.py  test_blacklist.py  test_sliding_tokens.py  test_stateless_auth.py  test_token_user.py  test_tokens.py  test_views.py
tests/test_client/: test_authentication.py  test_checks.py  test_utils.py  test_views.py  urls.py
tests/test_user/: test_admin.py  test_models.py  test_views.py
